objects/copadoccmint__Theme_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>copadoccmint__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Theme Mappings</relationshipLabel>
        <relationshipName>Theme_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoccmint__SF_Theme_Name__c</fullName>
        <label>SF Theme Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__TP_Theme_Name__c</fullName>
        <label>TP Theme Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Theme Mapping</label>
    <nameField>
        <displayFormat>TH-{000000}</displayFormat>
        <label>Theme Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Theme Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>